--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Flask-CORS==4.0.0
 requests==2.31.0
 python-dotenv==1.0.0
 gunicorn==21.2.0
-Pillow==10.2.0
-numpy==1.26.3
+Pillow==10.3.0
+numpy>=1.24.0,<2.0.0
 tensorflow==2.19.0
 firebase-admin==6.4.0
